# Simplefit

./: CHANGELOG.md  CONDUCT.md  CONTRIBUTING.md  README.md  pyproject.toml
.github/workflows/: ci-cd.yml
docs/: Makefile  conf.py  example.ipynb  make.bat
src/simplefit/: classifier.py  cleaner.py  eda.py  regressor.py  simplefit.py
tests/: test_classifier.py  test_cleaner.py  test_eda.py  test_regressor.py  test_simplefit.py
