[tool.poetry]
name = "simplefit"
version = "0.1.0"
description = "Package that will clean the data, do basic EDA and provide an insight to basic models, LR and ridge"
authors = ["Reza Zoe Navya Sanchit"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
pandas = "^1.3.5"
sklearn = "^0.0"

[tool.poetry.dev-dependencies]
pytest = "^6.2.5"
pytest-cov = "^3.0.0"


[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
